[package]
name = "rsl10-hal"
version = "0.1.0"
authors = ["Luciano Di Cocco <luciano.cocco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
nb = "0.1.2"
rsl10-pac = "0.0.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.3"

[features]
rt = ["rsl10-pac/rt"]
